@@ -1,5 +1,12 @@
 2013-04-23 Miguel de Dios <miguel.dedios@artica.es>
 
+	* include/functions_filemanager.php: fixed the javascript to show
+	the controls to upload file, create directory and create text file.
+	
+	Fixes: #3611231
+
+2013-04-23 Miguel de Dios <miguel.dedios@artica.es>
+
 	* operation/events/events_list.php, operation/events/events.php,
 	include/functions_events.php: fixed PHP warnings.
 
